--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Sam & Kate - Save the Date!</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
 
@@ -22,7 +26,7 @@
             <p>Save the date</p> 
             <h1>15 . 10 . 2021</h1>
             <p>That Amazing Place, Harlow</p>
-            <p>We hope you can join us to celebrate our wedding!</p>
+            <p>We hope you can join us to celebrate our wedding</p>
             <p>Invitations to follow</p>
           </div>
         </div>
