--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sam & Kate - Save the Date!</title>
+    <title>Sam & Kate - Save the Date</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -20,7 +20,7 @@
           <div class="flip-card-front">
             <img src="samkate.gif">
             <h1>Sam & Kate</h1>
-            <p>Are getting married!</p>
+            <p>Are getting married</p>
           </div>
           <div class="flip-card-back">
             <p>Save the date</p> 
